--- a/css/style.css
+++ b/css/style.css
@@ -87,11 +87,11 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+
 }
 
 
-.menu {
+.modelo, .gola, .material {
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -159,10 +159,22 @@ input {
 }
 
 button {
-    background-color: #404EED;
+    background-color: #C4C4C4;
     font-size: 20px;
     color: #FCFCFC;
     text-align: center;
 
 }
+input#post-encomenda:focus {
+    outline: none;
+    border: 2px solid #5A66EF;
+    box-shadow: 0 0 10px #5A66EF;
+}
 
+.selecionado{
+    border: 2px solid #5A66EF;;
+    /* border-radius: 50%;  */
+}
+.ativar{
+    background-color: #404EED;
+}
